--- a/style.css
+++ b/style.css
@@ -1,9 +1,40 @@
-html, body{
-    height: 100%;
-    padding: 10px;
-    margin: 10px;
-    color: #636363;
-    /*background-color: gray;*/
+/*https://openclassrooms.com/courses/prenez-en-main-bootstrap/une-grille*/
+
+body {
+  padding-top: 10px;
+}
+
+[class*="col-"], footer {
+  background-color: lightgreen;
+  border: 2px solid black;
+  border-radius: 6px;
+  line-height: 40px;
+  text-align: center;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 ul {
@@ -32,4 +63,93 @@ ul {
 }*/
 svg.barSVG {
     overflow: unset;
+}
+
+
+div.rtooltip {
+      position: absolute;
+      text-align: left;
+      width: 190px;
+      height: 110px;
+      padding: 2px;
+      font: 8px;
+      background: #EEE4C5;
+      border: 0px;
+      border-radius: 8px;
+      pointer-events: none;
+}
+
+/* map */
+#sphere {
+  padding-top: 0px;
+}
+/* #map {*/
+/*  width: 800px; /*100%;*/
+/*  height: 400px; /*100%;*/
+/*} */
+.stroke {
+  fill: none;
+  stroke: #000;
+  stroke-width: 1px;
+}
+.fill {
+  fill: #fff;
+}
+.graticule {
+  fill: none;
+  stroke: #777;
+  stroke-width: .5px;
+  stroke-opacity: .5;
+}
+.land {
+  fill: #222;
+}
+.boundary {
+  fill: none;
+  stroke: #fff;
+  stroke-width: .5px;
+}
+
+/* bar chart */
+#ghgBarChart {
+ /* position: absolute;
+  left:820px;
+  top:100px;*/
+}
+.barChartRegionLabel {
+  fill: #636363;
+}
+.axis {
+  font: 10px sans-serif;
+}
+.axis path,
+.axis line {
+  /*fill: none;*/
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+.x.axis path {
+  display: none;
+}
+
+/*Stats table*/
+#displayStats {
+  position: absolute;
+  margin-top: -40px;
+  margin-left: 1505px;
+}
+#displayGHGstats {
+ /* position: absolute;
+  margin-top: 4px;
+  margin-left: 819px;*/
+}
+
+
+
+#ghgStory {
+  margin-top: 20px;
+}
+td, th {
+  padding: 1px 4px;
+  font-size: 14px;
 }
