--- a/style.css
+++ b/style.css
@@ -83,21 +83,21 @@ div.rtooltip {
 #sphere {
   padding-top: 0px;
 }
-/* #map {*/
-/*  width: 800px; /*100%;*/
-/*  height: 400px; /*100%;*/
-/*} */
+#map {
+  padding-top: 40px;
+}
+
 .stroke {
   fill: none;
-  stroke: #000;
+  stroke: #555;
   stroke-width: 1px;
 }
 .fill {
-  fill: #fff;
+  fill: #555;
 }
 .graticule {
   fill: none;
-  stroke: #777;
+  stroke: #555;
   stroke-width: .5px;
   stroke-opacity: .5;
 }
@@ -106,7 +106,7 @@ div.rtooltip {
 }
 .boundary {
   fill: none;
-  stroke: #fff;
+  stroke: #555;
   stroke-width: .5px;
 }
 
