--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ div.rtooltip {
 }
 .axis path,
 .axis line {
-  /*fill: none;*/
+  fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
 }
