--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 [class*="col-"], footer {
-  /*background-color: lightgreen;
-  border: 2px solid black; */
+  background-color: lightgreen;
+  border: 2px solid black;
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -62,6 +62,15 @@ ul {
     /*line-height: 1.2; */
     height: 50px;
     width: 350px;
+    padding: 6px;
+    background: #F7F6E4;
+    color: #555;
+    border-radius: 4px;
+    font-size: 12px;
+}
+.d3-tip-line {
+    height: 30px;
+    width: 115px;
     padding: 6px;
     background: #F7F6E4;
     color: #555;
