--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ div.tooltip-bar {
 
 /*Used for toggle buttons */
 div.tooltip {
-  position: absolute;
+  position: relative;
   text-align: left;
   width: 150px;
   height: 60px;
