--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 [class*="col-"], footer {
-  /*background-color: lightgreen;*/
-  border: 2px solid black;
+  /*background-color: lightgreen;
+  border: 2px solid black;*/
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
