--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ div.rtooltip {
 /* map */
 #sphere {
   padding-top: 0px;
+  fill: #e6f3f7;   /*//#e6f3f7"); // "#add8e6" //"#fcfcef" */
 }
 /* #map {
   padding-top: 40px;
