--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 [class*="col-"], footer {
-  /*background-color: lightgreen; */
-  border: 2px solid black; 
+  /*background-color: lightgreen; 
+  border: 2px solid black; */
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -147,9 +147,9 @@ div.rtooltip {
   left: 435px; 
   top: 0px;
 }
-#barChartCaption, #cityCardTitle {
-  font-size: 17px;
+#barChartCaption {
   color: #565656;
+  font-weight: bold;
   text-align: left;
 }
 #barChartLegendLabel {
@@ -191,6 +191,11 @@ div.rtooltip {
 }
 
 /*Stats table*/
+#cityCardTitle {
+  font-size: 26px;
+  /*font-weight: bold; */
+  color: #565656;
+}
 #cityCardChangeReason {
   font-size: 16px;
   line-height: 1.2;
