--- a/style.css
+++ b/style.css
@@ -147,9 +147,9 @@ div.rtooltip {
   left: 435px; 
   top: 0px;
 }
-#barChartCaption {
+#barChartCaption, #cityCardTitle {
+  font-size: 17px;
   color: #565656;
-  font-weight: bold;
   text-align: left;
 }
 #barChartLegendLabel {
@@ -191,11 +191,6 @@ div.rtooltip {
 }
 
 /*Stats table*/
-#cityCardTitle {
-  font-size: 26px;
-  /*font-weight: bold; */
-  color: #565656;
-}
 #cityCardChangeReason {
   font-size: 16px;
   line-height: 1.2;
