--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ ul {
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-top: 1px solid #ccc;
-	color: #999;
+	color: #555;
+  font-weight: bold;
 	cursor: pointer;
 	float: left;
 	font-size: 12px;
