--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 [class*="col-"], footer {
-  /*background-color: lightgreen; */
-  border: 2px solid black; 
+  /*background-color: lightgreen; 
+  border: 2px solid black; */
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -108,6 +108,13 @@ div.rtooltip {
       border: 0px;
       border-radius: 8px;
       pointer-events: none;
+}
+
+/*intro*/
+#infoText {
+  font-size: 14px;
+  line-height: 1.2;
+  padding-bottom: 8px;
 }
 
 /* map */
