--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ ul {
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-top: 1px solid #ccc;
-	color: #999;
+	color: #555;
+  font-weight: bold;
 	cursor: pointer;
 	float: left;
 	font-size: 12px;
@@ -61,14 +62,16 @@ ul {
 }
 /*Used for barChart rects */
 div.tooltip-bar {
-  position: relative;
-  height: 35px;
+  position: absolute;
+  height: 40px;
   width: 111px;
   padding: 6px;
   background: #F7F6E4;
   color: #555;
   border-radius: 4px;
+  border-color: #5E554D;
   font-size: 12px;
+  font-weight: bold;
 }
 
 /*Used for toggle buttons */
@@ -109,6 +112,13 @@ div.rtooltip {
       pointer-events: none;
 }
 
+/*intro*/
+#infoText {
+  font-size: 14px;
+  line-height: 1.2;
+  padding-bottom: 8px;
+}
+
 /* map */
 #sphere {
   padding-top: 0px;
@@ -144,12 +154,12 @@ div.rtooltip {
 /* bar chart */
 #emissionsToggleButton {
   position: absolute;
-  left: 435px; 
+  left: 475px; 
   top: 0px;
 }
-#barChartCaption {
+#barChartCaption, #cityCardTitle {
+  font-size: 18px;
   color: #565656;
-  font-weight: bold;
   text-align: left;
 }
 #barChartLegendLabel {
@@ -191,11 +201,6 @@ div.rtooltip {
 }
 
 /*Stats table*/
-#cityCardTitle {
-  font-size: 26px;
-  /*font-weight: bold; */
-  color: #565656;
-}
 #cityCardChangeReason {
   font-size: 16px;
   line-height: 1.2;
