--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ ul {
 /*    margin-top: 80px;*/
 }
 
+/*--------------------------*/
+/*buttons*/
 .nytg-sort li {
 	background: none repeat scroll 0 0 #f9f9f9;
 	border-bottom: 1px solid #ccc;
@@ -41,7 +43,60 @@ ul {
 	padding: 0px 4px;
 	border-radius: 4px 4px 4px 4px;
 }
+/*drop-down menu*/
+.dropbtn {
+  background-color: none repeat scroll 0 0 #f9f9f9;
+  border: 1px solid #ccc;
+  color: #555;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 0px 4px;
+  border-radius: 4px 4px 4px 4px;
+  text-align: center;
+  margin: auto;
+  width: 70px;
+}
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: #555;
+    padding: 0px 4px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: grey}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: lightgrey;
+}
+
+
+/*--------------------------*/
+/*tooltips */
 /*Used for barChart protocol legend rects */
 .d3-tip {
     /*line-height: 1.2; */
@@ -153,6 +208,7 @@ div.rtooltip {
   stroke-width: .5px;
 }
 
+/*--------------------------*/
 /* bar chart */
 #emissionsToggleButton {
   position: absolute;
@@ -202,6 +258,7 @@ div.rtooltip {
   display: none;
 }
 
+/*--------------------------*/
 /*Stats table*/
 #cityCardChangeReason {
   font-size: 16px;
