--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ ul {
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 200px;
     z-index: 1;
 }
 
@@ -82,7 +83,7 @@ ul {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: grey}
+.dropdown-content a:hover {background-color: lightgrey}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
