--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ div.tooltip-bar {
   height: 40px;
   width: 111px;
   padding: 6px;
-  background: #F7F6E4;
-  color: #555;
+  background: #8A979D;
+  color: #000;
   border-radius: 4px;
   border-color: #5E554D;
   font-size: 12px;
@@ -298,7 +298,7 @@ div.rtooltip {
   text-align: left;
 }
 .bar {
-  stroke: gray;
+  /*stroke: gray;*/
 }
 .axis {
   font: 14px sans-serif;
@@ -314,6 +314,11 @@ div.rtooltip {
 }
 .x.axis path {
   display: none;
+}
+.xAxisCityName {
+  font-size: 16px;
+  color: #565656;
+  opacity: 0.3;
 }
 
 /*--------------------------*/
