--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /*https://openclassrooms.com/courses/prenez-en-main-bootstrap/une-grille*/
 
+/*--------------------------*/
+/*base elements*/
 body {
   padding-top: 10px;
-  font-family: "Ubuntu";
+  font-family: "Ubuntu", sans-serif;
 }
 
 [class*="col-"], footer {
-  /*background-color: lightgreen; 
-  border: 2px solid black; */
+  /*background-color: lightgreen; */
+  border: 2px solid white; 
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -25,6 +27,49 @@ ul {
     list-style: outside none none;
 /*    margin-top: 80px;*/
 }
+
+
+/*--------------------------*/
+/*$(window).width();*/
+/*@media screen and (max-width: 2048px)
+{
+  div #headingCan { 
+    padding-left: 101px;
+  }
+}
+
+@media screen and (max-width: 1200px)
+{
+  div #headingCan { 
+    color:cyan;
+    padding-left: 9px;
+  }
+}
+
+@media screen and (max-width: 850px)
+{
+  div #headingCan { 
+    color:green;
+    padding-left: -400px;
+  }
+}
+
+@media screen and (max-width: 1000px)
+{
+  div #headingCan { 
+    color:blue;
+    padding-left: -400px;
+  }
+}*/
+
+/*mobile phone*/
+/*@media screen and (max-width: 420px)
+{
+    #headingCan { 
+      color:blue; 
+      padding-left: 276px;
+    }
+}*/
 
 /*--------------------------*/
 /*buttons*/
@@ -100,23 +145,26 @@ ul {
 /*tooltips */
 /*Used for barChart protocol legend rects */
 .d3-tip {
-    /*line-height: 1.2; */
-    height: 50px;
-    width: 350px;
-    padding: 6px;
-    background: #F7F6E4;
-    color: #555;
-    border-radius: 4px;
-    font-size: 12px;
+  /*line-height: 1.2; */
+  height: 50px;
+  width: 350px;
+  padding: 6px;
+  background: #F7F6E4;
+  color: #555;
+  border-radius: 4px;
+  font-size: 12px;
+}
+.d3-tip-deactive {
+  background: transparent;
 }
 .d3-tip-line {
-    height: 35px;
-    width: 111px;
-    padding: 6px;
-    background: #555;
-    color: #F7F6E4;
-    border-radius: 4px;
-    font-size: 12px;
+  height: 35px;
+  width: 111px;
+  padding: 6px;
+  background: #555;
+  color: #F7F6E4;
+  border-radius: 4px;
+  font-size: 12px;
 }
 /*Used for barChart rects */
 div.tooltip-bar {
@@ -124,8 +172,8 @@ div.tooltip-bar {
   height: 40px;
   width: 111px;
   padding: 6px;
-  background: #F7F6E4;
-  color: #555;
+  background: #8A979D;
+  color: #000;
   border-radius: 4px;
   border-color: #5E554D;
   font-size: 12px;
@@ -211,15 +259,20 @@ div.rtooltip {
 
 /*--------------------------*/
 /* bar chart */
+.headingClass { /* svg stylings */
+  font-weight: bold;
+  /*color: #565656;*/
+  font-size: 17px;
+  fill: #565656;
+}
 #emissionsToggleButton {
   position: absolute;
-  left: 390px; 
+  left: 690px; 
   top: 0px;
 }
-#barChartCaption, #cityCardTitle {
-  font-size: 14.3px;
-  font-weight: bold;
-  padding-left: 15px;
+#barChartCaption {
+  font-size: 22px;
+  padding-left: 335px;
   color: #565656;
   text-align: left;
 }
@@ -229,6 +282,12 @@ div.rtooltip {
 }
 #barChartLegend {
   stroke: gray;
+}
+#barChartLegendUnits {
+  text-align: left;
+  font-size: 11px;
+  padding-left: 0px;
+  color: #636363;
 }
 .textLabels {
   fill: #636363;
@@ -242,22 +301,27 @@ div.rtooltip {
   text-align: left;
 }
 .bar {
-  stroke: gray;
+  /*stroke: gray;*/
 }
 .axis {
-  font: 10px sans-serif;
+  font: 14px sans-serif;
 }
 .axis path,
 .axis line {
   fill: none;
-  stroke: colour_labels;
-  shape-rendering: crispEdges;
+  stroke: #555;
+  shape-rendering: geometricPrecision; /*crispEdges;*/
 }
 .axis text {
-  fill: colour_labels;
+  fill: #555;
 }
 .x.axis path {
   display: none;
+}
+.xAxisCityName {
+  font-size: 16px;
+  color: #565656;
+  opacity: 0.3;
 }
 
 /*--------------------------*/
