--- a/style.css
+++ b/style.css
@@ -310,6 +310,11 @@ div.rtooltip {
 .bar {
   /*stroke: gray;*/
 }
+.zerobar { /*bar where d[attrFlag] is zero */
+  stroke: #565656;
+  /*stroke-width: 0.5;*/
+  opacity: 0.3;
+}
 .axis {
   font: 14px sans-serif;
 }
