--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ div.rtooltip {
 /* map */
 #sphere {
   padding-top: 0px;
-  fill: #e6f3f7;   /*//#e6f3f7"); // "#add8e6" //"#fcfcef" */
+  fill: #F4F7F7;  /* #F2F4F2; #e6f3f7;   //#e6f3f7"); // "#add8e6" //"#fcfcef" */
 }
 /* #map {
   padding-top: 40px;
