--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 [class*="col-"], footer {
   /*background-color: lightgreen; */
-  border: 2px solid gray;
+  /*border: 0px solid white;*/
+  border: 1px solid gray;
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
