--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 [class*="col-"], footer {
   /*background-color: lightgreen; */
-  border: 2px solid white;
+  border: 0px solid white;
+  /*border: 1px solid gray;*/
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -290,7 +291,7 @@ div.rtooltip {
 }
 #barChartLegendLabel {
   position: relative;
-  left: 160px;
+  left: 155px;
   color: #565656;
   text-align: left;
 }
